[gd_scene format=3 uid="uid://d1ed7v2jfqboh"]

[ext_resource type="Texture2D" uid="uid://vyf43o1ndn7n" path="res://art/assets/message_size.png" id="1_5wvlw"]
[ext_resource type="Script" uid="uid://c3wffgetrvj2f" path="res://scripts/conversation_panel.gd" id="2_8p0ow"]
[ext_resource type="PackedScene" uid="uid://c7e4wqewyqgwa" path="res://scenes/message.tscn" id="2_nvsum"]
[ext_resource type="Texture2D" uid="uid://dll56ygu2cfyd" path="res://art/assets/mensaje-jugadore-amarillo.png" id="3_073bq"]
[ext_resource type="Texture2D" uid="uid://ce7v7yl6kn4eb" path="res://art/assets/mensaje-emociones-light.png" id="4_8p0ow"]
[ext_resource type="Texture2D" uid="uid://wuw0wywh1jww" path="res://art/assets/emociones/yes1.png" id="5_y0d1j"]
[ext_resource type="Script" uid="uid://c7kmt5joy4ck" path="res://scripts/emoji.gd" id="6_27hj5"]
[ext_resource type="Texture2D" uid="uid://gkew4m5y3xvn" path="res://art/assets/emociones/loving1.png" id="7_xwxy4"]
[ext_resource type="Texture2D" uid="uid://ctu7ieq186khs" path="res://art/assets/emociones/cheerful1.png" id="8_5wvlw"]
[ext_resource type="Texture2D" uid="uid://bqs74lbulo5vc" path="res://art/assets/emociones/laughing1.png" id="9_073bq"]
[ext_resource type="Texture2D" uid="uid://cqpslrc8n2q2f" path="res://art/assets/emociones/downcast1.png" id="10_sodx2"]
[ext_resource type="Texture2D" uid="uid://2hawtikrvyfn" path="res://art/assets/emociones/enthusiastic1.png" id="11_bqran"]
[ext_resource type="Texture2D" uid="uid://71x75cokcpmr" path="res://art/assets/emociones/helpful2.png" id="12_0ssud"]
[ext_resource type="Texture2D" uid="uid://74m3gldjicx4" path="res://art/assets/emociones/welcoming2.png" id="13_08lua"]
[ext_resource type="Texture2D" uid="uid://dbjjars14lh4j" path="res://art/assets/emociones/surprised2.png" id="14_i21pg"]
[ext_resource type="Texture2D" uid="uid://d0n0onq0jc17v" path="res://art/assets/emociones/laughing2.png" id="15_i4x6y"]
[ext_resource type="Texture2D" uid="uid://d014fhcwop1p1" path="res://art/assets/emociones/confused1.png" id="16_y1wo0"]
[ext_resource type="Texture2D" uid="uid://duxtxxt4ud0ff" path="res://art/assets/emociones/no1.png" id="17_vv5fx"]
[ext_resource type="Shader" uid="uid://bk4rkpv5augi" path="res://shaders/dashed_outline.gdshader" id="18_5wvlw"]
[ext_resource type="Theme" uid="uid://dd4mjbdjh70dg" path="res://themes/inputtext.tres" id="18_27hj5"]
[ext_resource type="Script" uid="uid://ctirgwh01g8it" path="res://scripts/emoji_selected.gd" id="20_5wvlw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_iywne"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_073bq"]
shader = ExtResource("18_5wvlw")
shader_parameter/radius = 10.000000475
shader_parameter/thickness = 3.4000001615
shader_parameter/color = Color(0.7137255, 0.18039216, 0.37254903, 0.49803922)
shader_parameter/dash_count = 10.0
shader_parameter/dash_ratio = 0.6210000294975
shader_parameter/speed = 0.8

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5wvlw"]
resource_local_to_scene = true
shader = ExtResource("18_5wvlw")
shader_parameter/radius = 20.110000955225
shader_parameter/thickness = 3.4070001618325
shader_parameter/color = Color(0, 0.07058824, 0.29411766, 0.49803922)
shader_parameter/dash_count = 13.2310005809725
shader_parameter/dash_ratio = 0.5
shader_parameter/speed = 1.2

[node name="Conversation_p2" type="TextureRect" unique_id=507673615]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -768.0
offset_bottom = 288.0
grow_horizontal = 0
size_flags_horizontal = 8
texture = ExtResource("1_5wvlw")
stretch_mode = 4
script = ExtResource("2_8p0ow")

[node name="TextureRect" type="TextureRect" parent="." unique_id=1474987279]
layout_mode = 0
offset_top = 10.0
offset_right = 768.0
offset_bottom = 298.0
texture = ExtResource("3_073bq")

[node name="Panel" parent="." unique_id=190659816 instance=ExtResource("2_nvsum")]
layout_mode = 0
offset_left = 45.0
offset_top = 113.0
offset_right = 726.0
offset_bottom = 243.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_iywne")

[node name="Emojis_panel" type="TextureRect" parent="." unique_id=169283335]
visible = false
layout_mode = 0
offset_left = -324.0
offset_top = -17.0
offset_right = 348.0
offset_bottom = 127.0
texture = ExtResource("4_8p0ow")

[node name="HBoxContainer" type="HBoxContainer" parent="Emojis_panel" unique_id=597615380]
layout_mode = 0
offset_left = 36.0
offset_top = 49.0
offset_right = 640.0
offset_bottom = 97.0
theme_override_constants/separation = 2

[node name="yes1" type="TextureRect" parent="Emojis_panel/HBoxContainer" unique_id=1891434503]
layout_mode = 2
texture = ExtResource("5_y0d1j")
script = ExtResource("6_27hj5")

[node name="loving1" type="TextureRect" parent="Emojis_panel/HBoxContainer" unique_id=335057497]
layout_mode = 2
texture = ExtResource("7_xwxy4")
script = ExtResource("6_27hj5")

[node name="cheerful1" type="TextureRect" parent="Emojis_panel/HBoxContainer" unique_id=352509321]
layout_mode = 2
texture = ExtResource("8_5wvlw")
script = ExtResource("6_27hj5")

[node name="laughing1" type="TextureRect" parent="Emojis_panel/HBoxContainer" unique_id=802717347]
layout_mode = 2
texture = ExtResource("9_073bq")
script = ExtResource("6_27hj5")

[node name="downcast1" type="TextureRect" parent="Emojis_panel/HBoxContainer" unique_id=964281701]
layout_mode = 2
texture = ExtResource("10_sodx2")
script = ExtResource("6_27hj5")

[node name="enthusiastic1" type="TextureRect" parent="Emojis_panel/HBoxContainer" unique_id=1707164974]
layout_mode = 2
texture = ExtResource("11_bqran")
script = ExtResource("6_27hj5")

[node name="helpful2" type="TextureRect" parent="Emojis_panel/HBoxContainer" unique_id=1429717395]
layout_mode = 2
texture = ExtResource("12_0ssud")
script = ExtResource("6_27hj5")

[node name="welcoming2" type="TextureRect" parent="Emojis_panel/HBoxContainer" unique_id=1023253462]
layout_mode = 2
texture = ExtResource("13_08lua")
script = ExtResource("6_27hj5")

[node name="surprised2" type="TextureRect" parent="Emojis_panel/HBoxContainer" unique_id=776781826]
layout_mode = 2
texture = ExtResource("14_i21pg")
script = ExtResource("6_27hj5")

[node name="laughing2" type="TextureRect" parent="Emojis_panel/HBoxContainer" unique_id=1848886786]
layout_mode = 2
texture = ExtResource("15_i4x6y")
script = ExtResource("6_27hj5")

[node name="confused1" type="TextureRect" parent="Emojis_panel/HBoxContainer" unique_id=222979444]
layout_mode = 2
texture = ExtResource("16_y1wo0")
script = ExtResource("6_27hj5")

[node name="no1" type="TextureRect" parent="Emojis_panel/HBoxContainer" unique_id=911742741]
layout_mode = 2
texture = ExtResource("17_vv5fx")
script = ExtResource("6_27hj5")

[node name="ColorRect" type="TextureRect" parent="." unique_id=925070069]
visible = false
material = SubResource("ShaderMaterial_073bq")
layout_mode = 0
offset_left = 660.0
offset_top = -7.0
offset_right = 756.0
offset_bottom = 46.0
texture = ExtResource("16_y1wo0")

[node name="TimerLbl" type="Label" parent="." unique_id=2111485015]
layout_mode = 0
offset_left = 677.0
offset_top = 2.0
offset_right = 742.0
offset_bottom = 35.0
theme = ExtResource("18_27hj5")
theme_override_colors/font_color = Color(0.972549, 0.72156864, 0, 1)
theme_override_font_sizes/font_size = 32
text = "20.00"
horizontal_alignment = 2

[node name="Timer" type="Timer" parent="." unique_id=821521094]
wait_time = 20.0
one_shot = true
autostart = true

[node name="ColorRect2" type="TextureRect" parent="." unique_id=2015546659]
visible = false
material = SubResource("ShaderMaterial_5wvlw")
layout_mode = 0
offset_left = 587.0
offset_top = 228.0
offset_right = 674.0
offset_bottom = 301.0
texture = ExtResource("8_5wvlw")

[node name="Emoji_selected" type="TextureRect" parent="." unique_id=441757454]
visible = false
layout_mode = 0
offset_left = 604.0
offset_top = 239.0
offset_right = 644.0
offset_bottom = 279.0
texture = ExtResource("8_5wvlw")
script = ExtResource("20_5wvlw")

[connection signal="gui_input" from="Emojis_panel/HBoxContainer/yes1" to="Emojis_panel/HBoxContainer/yes1" method="_on_gui_input"]
[connection signal="mouse_entered" from="Emojis_panel/HBoxContainer/yes1" to="Emojis_panel/HBoxContainer/yes1" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Emojis_panel/HBoxContainer/yes1" to="Emojis_panel/HBoxContainer/yes1" method="_on_mouse_exited"]
[connection signal="gui_input" from="Emojis_panel/HBoxContainer/loving1" to="Emojis_panel/HBoxContainer/loving1" method="_on_gui_input"]
[connection signal="mouse_entered" from="Emojis_panel/HBoxContainer/loving1" to="Emojis_panel/HBoxContainer/loving1" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Emojis_panel/HBoxContainer/loving1" to="Emojis_panel/HBoxContainer/loving1" method="_on_mouse_exited"]
[connection signal="gui_input" from="Emojis_panel/HBoxContainer/cheerful1" to="Emojis_panel/HBoxContainer/cheerful1" method="_on_gui_input"]
[connection signal="mouse_entered" from="Emojis_panel/HBoxContainer/cheerful1" to="Emojis_panel/HBoxContainer/cheerful1" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Emojis_panel/HBoxContainer/cheerful1" to="Emojis_panel/HBoxContainer/cheerful1" method="_on_mouse_exited"]
[connection signal="gui_input" from="Emojis_panel/HBoxContainer/laughing1" to="Emojis_panel/HBoxContainer/laughing1" method="_on_gui_input"]
[connection signal="mouse_entered" from="Emojis_panel/HBoxContainer/laughing1" to="Emojis_panel/HBoxContainer/laughing1" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Emojis_panel/HBoxContainer/laughing1" to="Emojis_panel/HBoxContainer/laughing1" method="_on_mouse_exited"]
[connection signal="gui_input" from="Emojis_panel/HBoxContainer/downcast1" to="Emojis_panel/HBoxContainer/downcast1" method="_on_gui_input"]
[connection signal="mouse_entered" from="Emojis_panel/HBoxContainer/downcast1" to="Emojis_panel/HBoxContainer/downcast1" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Emojis_panel/HBoxContainer/downcast1" to="Emojis_panel/HBoxContainer/downcast1" method="_on_mouse_exited"]
[connection signal="gui_input" from="Emojis_panel/HBoxContainer/enthusiastic1" to="Emojis_panel/HBoxContainer/enthusiastic1" method="_on_gui_input"]
[connection signal="mouse_entered" from="Emojis_panel/HBoxContainer/enthusiastic1" to="Emojis_panel/HBoxContainer/enthusiastic1" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Emojis_panel/HBoxContainer/enthusiastic1" to="Emojis_panel/HBoxContainer/enthusiastic1" method="_on_mouse_exited"]
[connection signal="gui_input" from="Emojis_panel/HBoxContainer/helpful2" to="Emojis_panel/HBoxContainer/helpful2" method="_on_gui_input"]
[connection signal="mouse_entered" from="Emojis_panel/HBoxContainer/helpful2" to="Emojis_panel/HBoxContainer/helpful2" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Emojis_panel/HBoxContainer/helpful2" to="Emojis_panel/HBoxContainer/helpful2" method="_on_mouse_exited"]
[connection signal="gui_input" from="Emojis_panel/HBoxContainer/welcoming2" to="Emojis_panel/HBoxContainer/welcoming2" method="_on_gui_input"]
[connection signal="mouse_entered" from="Emojis_panel/HBoxContainer/welcoming2" to="Emojis_panel/HBoxContainer/welcoming2" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Emojis_panel/HBoxContainer/welcoming2" to="Emojis_panel/HBoxContainer/welcoming2" method="_on_mouse_exited"]
[connection signal="gui_input" from="Emojis_panel/HBoxContainer/surprised2" to="Emojis_panel/HBoxContainer/surprised2" method="_on_gui_input"]
[connection signal="mouse_entered" from="Emojis_panel/HBoxContainer/surprised2" to="Emojis_panel/HBoxContainer/surprised2" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Emojis_panel/HBoxContainer/surprised2" to="Emojis_panel/HBoxContainer/surprised2" method="_on_mouse_exited"]
[connection signal="gui_input" from="Emojis_panel/HBoxContainer/laughing2" to="Emojis_panel/HBoxContainer/laughing2" method="_on_gui_input"]
[connection signal="mouse_entered" from="Emojis_panel/HBoxContainer/laughing2" to="Emojis_panel/HBoxContainer/laughing2" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Emojis_panel/HBoxContainer/laughing2" to="Emojis_panel/HBoxContainer/laughing2" method="_on_mouse_exited"]
[connection signal="gui_input" from="Emojis_panel/HBoxContainer/confused1" to="Emojis_panel/HBoxContainer/confused1" method="_on_gui_input"]
[connection signal="mouse_entered" from="Emojis_panel/HBoxContainer/confused1" to="Emojis_panel/HBoxContainer/confused1" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Emojis_panel/HBoxContainer/confused1" to="Emojis_panel/HBoxContainer/confused1" method="_on_mouse_exited"]
[connection signal="gui_input" from="Emojis_panel/HBoxContainer/no1" to="Emojis_panel/HBoxContainer/no1" method="_on_gui_input"]
[connection signal="mouse_entered" from="Emojis_panel/HBoxContainer/no1" to="Emojis_panel/HBoxContainer/no1" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Emojis_panel/HBoxContainer/no1" to="Emojis_panel/HBoxContainer/no1" method="_on_mouse_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
